--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   <title>BattleShip</title>
 </head>
 <body>
+  <div class="cpu" id="cpu-board">˜
+  </div>
+  <div class="cpu-info">CPU INFO
+
+  </div> 
+  <div class="player-info">PLAYER INFO
+
+    <input>
+  </div> 
+
+
   <div class="board" id="game-board">
   </div>
 </body>
