Player Ship placement logic

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <title>BattleShip</title>
   </head>
   <body>
-    <div class="ships">
-      <button class="ship-button">BattleShip 4-Nodes</button>
-      <button class="ship-button">Cruiser 3-Nodes</button>
-      <button class="ship-button">Submarine 3-Nodes</button>
-      <button class="ship-button">Destroyer 2-Nodes</button>
+    <div id="ships">
+      <button class="ship-button" id="battleship">BattleShip 5-Nodes</button>
+      <button class="ship-button" id="cruiser">Cruiser 4-Nodes</button>
+      <button class="ship-button" id="sub">Submarine 3-Nodes</button>
+      <button class="ship-button" id="destroyer">Destroyer 2-Nodes</button>
+      <h1 id=""></h1>
+      <h1 id="user-prompt"></h1>
     </div>
     <div class="board" id="game-board">
       <div class="cpu" id="cpu-board"></div>
