CPU automatic ship placement logic + guessing and checking for hit/miss logic + win check

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <button class="ship-button" id="cruiser">Cruiser 4-Nodes</button>
       <button class="ship-button" id="sub">Submarine 3-Nodes</button>
       <button class="ship-button" id="destroyer">Destroyer 2-Nodes</button>
-      <h1 id=""></h1>
-      <h1 id="user-prompt"></h1>
+      <h1 id="">Battle Ship</h1>
+      <h1 id="user-prompt">Will be prompts for player</h1>
     </div>
     <div class="board" id="game-board">
       <div class="cpu" id="cpu-board"></div>
