--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
       <button class="ship-button" id="sub">Submarine 3-Nodes</button>
       <button class="ship-button" id="destroyer">Destroyer 2-Nodes</button>
       <h1 id="">Battle Ship</h1>
-      <h1 id="user-prompt">Will be prompts for player</h1>
+      <h1 id="user-prompt"> 
+        <div id="prompt">Please Select A Ship To Place</div>
+        <button id="play-button">Play Game</button>
+      </h1>
     </div>
-    <div class="board" id="game-board">
+    <div id="board-container">
+    <div class="board" id="game-board"></div>
       <div class="cpu" id="cpu-board"></div>
+      <button id="swap-turn">Change Turn</button>
+
     </div>
   </body>
 </html>
